# parcels-hass

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  repository.yaml
.github/workflows/: addon.yml  tests.yml
addons/parcels_fedex_scraper/: Dockerfile  README.md  config.yaml  run.sh
addons/parcels_fedex_scraper/app/: main.py
custom_components/package_inbox/: __init__.py  binary_sensor.py  carrier_rules.py  const.py  dashboard.py  deleted_imports.py  entity.py  manifest.json  notifications.py  parcel_api.py  parser.py  record_merge.py  sensor.py  services.yaml  tracking.py  window.py
docs/: amazon-cookiebridge-threat-model.md  development.md  fedex-scraper.md  parcel-api-roadmap.md
experimental/fedex-scraper/: Dockerfile  README.md  compose.yaml  pyproject.toml
experimental/fedex-scraper/app/: __init__.py  main.py
tests/: test_addon_packaging.py  test_carrier_rules.py  test_dashboard.py  test_deleted_imports.py  test_namespace.py  test_notifications.py  test_parcel_api.py  test_parser.py  test_record_merge.py  test_tracking.py  test_tracking_sidecar.py  test_window.py
