[project]
name = "parcels-hass"
version = "0.2.0"
description = "Privacy-first parcel inbox for Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "joeblack2k" }]
keywords = ["home-assistant", "hacs", "parcel", "package", "tracking"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
